--- a/css/sequential_activation.less
+++ b/css/sequential_activation.less
@@ -175,7 +175,7 @@ h1, h2, h3 {
 	}
 }
 #explain {
-	background: #406886 url("http://rayhyde.nl/playground/img/playground.png") no-repeat scroll 98% bottom / 150px auto;
+	background: #406886 url("../img/playground.png") no-repeat scroll 98% bottom / 150px auto;
 	width: 50%;
 	float: right;
 	border-radius: 10px;
